tests/paczka1/fuzzy1/50048531.err
Error in line 12: nVROw6 S779 77,5
Error in line 21: C6okbUJ9 S779 75,0
Error in line 22: rmjH S779 91,3
Error in line 36: nVROw6 A723 69,1
